--- a/WirePrime/WirePrime.vcxproj
+++ b/WirePrime/WirePrime.vcxproj
@@ -83,8 +83,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(MSBuildProjectDirectory)\SDL2-2.0.5\include;$(IncludePath);$(AMDAPPSDKROOT)\include;</IncludePath>
-    <LibraryPath>$(MSBuildProjectDirectory)\SDL2-2.0.5\lib\x64;$(LibraryPath);$(AMDAPPSDKROOT)\lib\x86_64;</LibraryPath>
+    <IncludePath>$(ProjectDir)\SDL2-2.0.5\include;$(IncludePath);$(AMDAPPSDKROOT)\include</IncludePath>
+    <LibraryPath>$(ProjectDir)\SDL2-2.0.5\lib\x64;$(LibraryPath);$(AMDAPPSDKROOT)\lib\x86_64;</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
